Split up analysis into basic and scenario
- Add more to dos

--- a/code/03_scenario_analysis.ipynb
+++ b/code/03_scenario_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "2e582dfd",
    "metadata": {},
    "source": [
-    "# 02. Explore loop census\n",
+    "# 03. Scenario analysis\n",
     "## Project: Bicycle node network loop analysis"
    ]
   },
@@ -14,12 +14,15 @@
    "id": "2bc9b960",
    "metadata": {},
    "source": [
-    "This notebook explores the loop census created in notebook 01, beyond descriptive network statistics.\n",
+    "This notebook analyses loops created in notebook 01 with different scenarios.  \n",
+    "For now explore two scenarios:  \n",
+    "1. Family with small children: 5-20km, max slope 4%\n",
+    "1. Teenage/adult leisure cyclist: 10-40km, max slope 6%\n",
     "\n",
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
-    "Created: 2024-01-29  \n",
-    "Last modified: 2024-10-02"
+    "Created: 2024-10-07  \n",
+    "Last modified: 2024-10-07"
    ]
   },
   {
@@ -28,7 +31,12 @@
    "metadata": {},
    "source": [
     "## To do\n",
-    "- [ ] Kommune cohesion: Loops vs distance to nearest kommune\n",
+    "- [ ] Refactor with functions for restrictions\n",
+    "- [ ] Sudden bad weather/accident scenario for family: if k km travelled, what is shortest path back with/without/how much overlaps?\n",
+    "- [ ] Re-think or drop due to coastline effects: Kommune cohesion: Loops vs distance to nearest kommune\n",
+    "- [ ] How much of network due to topography / existing paths?\n",
+    "- [ ] Study ideal triangle grid?\n",
+    "- [ ] Quantify?: information explosion huge first, but gets smaller with each node passed\n",
     "- [X] POI analysis"
    ]
   },
@@ -101,18 +109,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c9f290",
+   "id": "bcd4d066",
    "metadata": {},
    "source": [
-    "## Exploration"
+    "## Load data"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bcd4d066",
+   "id": "731b1fbd-6ce8-431d-a097-e8f13313da26",
    "metadata": {},
    "source": [
-    "### Load data"
+    "This can take several minutes."
    ]
   },
   {
@@ -157,49 +165,77 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c05b5773",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize=(8, 3))\n",
-    "axes1 = fig.add_axes([0.1, 0.1, 0.35, 0.8])\n",
-    "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
-    "\n",
-    "axes1.hist(alllooplengths, density=True)\n",
-    "if MPERUNIT == 1000:\n",
-    "    axes1.set_xlabel(\"Length [km]\")\n",
-    "elif MPERUNIT == 1:\n",
-    "    axes1.set_xlabel(\"Length [m]\")\n",
-    "else:\n",
-    "    axes1.set_xlabel(\"Length\")\n",
-    "axes1.set_ylabel(\"Probability\")\n",
-    "axes1.set_title(\"Loop lengths\")\n",
-    "\n",
-    "axes2.hist(allloopnumnodes, density=True, bins=list(range(LOOP_NUMNODE_BOUND + 1)))\n",
-    "axes2.set_xlabel(\"Nodes\")\n",
-    "axes2.set_title(\"Nodes per loop\")\n",
-    "axes2.set_xlim([0, LOOP_NUMNODE_BOUND + 0.5])\n",
-    "\n",
-    "plt.text(LOOP_NUMNODE_BOUND / 20, 0.01, \"Bound: \" + str(LOOP_NUMNODE_BOUND))\n",
-    "plt.text(LOOP_NUMNODE_BOUND / 20, 0.04, \"Loops: \" + str(numloops));"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fedbbbd0",
    "metadata": {},
    "source": [
-    "### Restrict to length bounds"
+    "## Analyse"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b62c74c8",
+   "id": "b77735f4-51b8-473f-b5b9-4d5577322abc",
    "metadata": {},
    "source": [
-    "Go through all nodes and restrict their loops to the scenario's length restrictions."
+    "### Max slopes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "045eded7-db81-4d0f-aee2-f47f6bf7fe3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linkmaxslopes = [e[\"max_slope\"] for e in G.es]\n",
+    "fig = plt.figure(figsize=(4, 3))\n",
+    "axes = fig.add_axes([0.16, 0.16, 0.76, 0.75])\n",
+    "\n",
+    "histxy = axes.hist(linkmaxslopes, bins=[i / 4 for i in list(range(32))], density=False)\n",
+    "axes.plot([MAXSLOPE_LIMIT, MAXSLOPE_LIMIT], [0, max(histxy[0])], \":r\")\n",
+    "axes.text(\n",
+    "    MAXSLOPE_LIMIT * 0.95,\n",
+    "    max(histxy[0]),\n",
+    "    str(\n",
+    "        round(\n",
+    "            len([i for i, x in enumerate(linkmaxslopes) if (x < MAXSLOPE_LIMIT)])\n",
+    "            / len(linkmaxslopes)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"right\",\n",
+    "    verticalalignment=\"top\",\n",
+    ")\n",
+    "axes.text(\n",
+    "    MAXSLOPE_LIMIT * 1.05,\n",
+    "    max(histxy[0]),\n",
+    "    str(\n",
+    "        round(\n",
+    "            len([i for i, x in enumerate(linkmaxslopes) if (x >= MAXSLOPE_LIMIT)])\n",
+    "            / len(linkmaxslopes)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"left\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=\"red\",\n",
+    ")\n",
+    "axes.set_xlabel(\"Max slope [%]\")\n",
+    "axes.set_ylabel(\"Frequency\")\n",
+    "axes.set_title(\"Link max slopes\")\n",
+    "axes.set_xlim([0, 8])\n",
+    "\n",
+    "fig.savefig(PATH[\"plot\"] + \"maxslopes_maxslope\" + str(MAXSLOPE_LIMIT))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fa49509-bb82-471c-a6f3-4aaed38086fa",
+   "metadata": {},
+   "source": [
+    "### Restrict to scenario lengths"
    ]
   },
   {
@@ -210,7 +246,7 @@
    "outputs": [],
    "source": [
     "allloops_bound = {}\n",
-    "for sourcenode in tqdm(allloops):\n",
+    "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario lenghts\"):\n",
     "    this_lengths = np.array(allloops[sourcenode][\"lengths\"]) * MPERUNIT\n",
     "    mask_this = (this_lengths >= RESTRICTIONS[\"looplength_min\"]) & (\n",
     "        this_lengths <= RESTRICTIONS[\"looplength_max\"]\n",
@@ -264,16 +300,8 @@
     "    edge_width=get_edgewidth(G.ecount()),\n",
     ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e94a4a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.tight_layout()\n",
+    "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
@@ -289,7 +317,7 @@
    "id": "ab5423e1",
    "metadata": {},
    "source": [
-    "### Restrict to acceptable gradients"
+    "### Restrict to scenario gradients"
    ]
   },
   {
@@ -300,7 +328,7 @@
    "outputs": [],
    "source": [
     "allloops_bound = {}\n",
-    "for sourcenode in tqdm(allloops):\n",
+    "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario gradients\"):\n",
     "    this_lengths = np.array(allloops[sourcenode][\"lengths\"]) * MPERUNIT\n",
     "    this_maxslopes = np.array(allloops[sourcenode][\"max_slopes\"])\n",
     "    mask_this = this_lengths >= RESTRICTIONS[\"looplength_min\"]\n",
@@ -337,16 +365,8 @@
     "        vertex_sizes.append(0)\n",
     "\n",
     "numloops_max = max(vertex_sizes)\n",
-    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66459687",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]\n",
+    "\n",
     "edge_colors = []\n",
     "for e in G.es:\n",
     "    if e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"]:\n",
@@ -377,16 +397,8 @@
     "    fontsize=8,\n",
     ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f333bcb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.tight_layout()\n",
+    "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
@@ -470,16 +482,8 @@
     "        vertex_sizes.append(0)\n",
     "\n",
     "numloops_max = max(vertex_sizes)\n",
-    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8bccf25-5a1a-405f-941b-63a32d7731fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]\n",
+    "\n",
     "edge_colors = []\n",
     "for e in G.es:\n",
     "    if e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"]:  # and not e[\"has_water\"]:\n",
@@ -521,18 +525,8 @@
     "    fontsize=8,\n",
     ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2e34112-f6ac-46a0-acba-79e9135493ac",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "plt.tight_layout()\n",
+    "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
@@ -552,7 +546,7 @@
    "id": "8b52a724-7265-4329-ba10-ba1641f1016a",
    "metadata": {},
    "source": [
-    "## Restrict with POI diversity"
+    "### Restrict with POI diversity"
    ]
   },
   {
@@ -607,16 +601,8 @@
     "        vertex_sizes.append(0)\n",
     "\n",
     "numloops_max = max(vertex_sizes)\n",
-    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9d32b9f-2b75-44c4-b7b7-1d2f288133b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]\n",
+    "\n",
     "edge_colors = []\n",
     "for e in G.es:\n",
     "    if e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"]:  # and not e[\"has_water\"]:\n",
@@ -664,16 +650,8 @@
     "    fontsize=8,\n",
     ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d2b5c78-3641-4dab-88a7-b0bb6d889498",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.tight_layout()\n",
+    "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
