Refactor imports to setup_parameters

--- a/code/02_basic_statistics.ipynb
+++ b/code/02_basic_statistics.ipynb
@@ -30,29 +30,7 @@
     "## To do\n",
     "- [ ] Plot avg/median loop length per node: network, distribution (for all scenarios)\n",
     "- [ ] Plot distrib of length of loops that have nodes == loop_numnode_bound. To see whether we should increase the bound.\n",
-    "- [ ] Heatmaps over country?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5d0a7b7f",
-   "metadata": {},
-   "source": [
-    "## Imports"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f81d35c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import igraph as ig\n",
-    "import pickle\n",
-    "from itertools import compress"
+    "- [ ] Heatmaps over area?"
    ]
   },
   {
