--- a/code/02_basic_statistics.ipynb
+++ b/code/02_basic_statistics.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "## To do\n",
     "- [ ] Plot avg/median loop length per node: network, distribution (for all scenarios)\n",
-    "- [ ] Plot distrib of length of loops that have nodes == loop_numnode_bound. To see whether we should increase the bound.\n",
+    "- [X] Plot distrib of length of loops that have nodes == loop_numnode_bound. To see whether we should increase the bound.\n",
     "- [ ] Heatmaps over area?"
    ]
   },
@@ -268,8 +268,45 @@
     "    axes1.set_xlabel(\"Length\")\n",
     "axes1.set_ylabel(\"Probability\")\n",
     "axes1.set_title(\"Loop lengths\")\n",
+    "axes1.set_xlim(left=0)\n",
     "\n",
     "axes2.hist(allloopnumnodes, density=True, bins=list(range(LOOP_NUMNODE_BOUND + 1)))\n",
+    "axes2.set_xlabel(\"Nodes\")\n",
+    "axes2.set_title(\"Nodes per loop\")\n",
+    "axes2.set_xlim([0, LOOP_NUMNODE_BOUND + 0.5])\n",
+    "\n",
+    "plt.text(LOOP_NUMNODE_BOUND / 20, 0.01, \"Bound: \" + str(LOOP_NUMNODE_BOUND))\n",
+    "plt.text(LOOP_NUMNODE_BOUND / 20, 0.04, \"Loops: \" + str(numloops));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dfab2c8-ef8e-473c-a861-c60623a5af84",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "indmaxnodes = np.where(allloopnumnodes == LOOP_NUMNODE_BOUND)[0]\n",
+    "fig = plt.figure(figsize=(8, 3))\n",
+    "axes1 = fig.add_axes([0.1, 0.1, 0.35, 0.8])\n",
+    "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
+    "\n",
+    "axes1.hist(alllooplengths[indmaxnodes], density=True)\n",
+    "if MPERUNIT == 1000:\n",
+    "    axes1.set_xlabel(\"Length [km]\")\n",
+    "elif MPERUNIT == 1:\n",
+    "    axes1.set_xlabel(\"Length [m]\")\n",
+    "else:\n",
+    "    axes1.set_xlabel(\"Length\")\n",
+    "axes1.set_ylabel(\"Probability\")\n",
+    "axes1.set_title(\"Loop lengths (when max nodes)\")\n",
+    "axes1.set_xlim(left=0)\n",
+    "\n",
+    "axes2.hist(\n",
+    "    allloopnumnodes[indmaxnodes], density=True, bins=list(range(LOOP_NUMNODE_BOUND + 1))\n",
+    ")\n",
     "axes2.set_xlabel(\"Nodes\")\n",
     "axes2.set_title(\"Nodes per loop\")\n",
     "axes2.set_xlim([0, LOOP_NUMNODE_BOUND + 0.5])\n",
