Plot avg/median loop length per node

--- a/code/02_basic_statistics.ipynb
+++ b/code/02_basic_statistics.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "## To do\n",
-    "- [ ] Plot avg/median loop length per node: network, distribution (for all scenarios)\n",
+    "- [X] Plot avg/median loop length per node: network, distribution (for all scenarios)\n",
     "- [X] Plot distrib of length of loops that have nodes == loop_numnode_bound. To see whether we should increase the bound.\n",
     "- [ ] Heatmaps over area?"
    ]
@@ -313,6 +313,95 @@
     "\n",
     "plt.text(LOOP_NUMNODE_BOUND / 20, 0.01, \"Bound: \" + str(LOOP_NUMNODE_BOUND))\n",
     "plt.text(LOOP_NUMNODE_BOUND / 20, 0.04, \"Loops: \" + str(numloops));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a92418f-c975-4944-a94e-5470fe9ffd7e",
+   "metadata": {},
+   "source": [
+    "### Average/median loop length per node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c7cafa7-ff1d-4964-8673-b1f97568146e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allloopavglengths = [sum(v[\"lengths\"]) / len(v[\"lengths\"]) for v in allloops.values()]\n",
+    "allloopmedianlengths = [median(v[\"lengths\"]) for v in allloops.values()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb9c8a70-e79b-4e3c-acbc-3c1e21439418",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(4, 3))\n",
+    "axes = fig.add_axes([0.16, 0.16, 0.76, 0.75])\n",
+    "axes.hist(allloopavglengths, density=False)\n",
+    "if MPERUNIT == 1000:\n",
+    "    axes.set_xlabel(\"Length [km]\")\n",
+    "elif MPERUNIT == 1:\n",
+    "    axes.set_xlabel(\"Length [m]\")\n",
+    "else:\n",
+    "    axes.set_xlabel(\"Length\")\n",
+    "axes.set_ylabel(\"Probability\")\n",
+    "axes.set_title(\"Average loop lengths (over nodes)\")\n",
+    "axes.set_xlim(left=0)\n",
+    "fig = plt.figure(figsize=(4, 3))\n",
+    "axes = fig.add_axes([0.16, 0.16, 0.76, 0.75])\n",
+    "axes.hist(allloopmedianlengths, density=False)\n",
+    "if MPERUNIT == 1000:\n",
+    "    axes.set_xlabel(\"Length [km]\")\n",
+    "elif MPERUNIT == 1:\n",
+    "    axes.set_xlabel(\"Length [m]\")\n",
+    "else:\n",
+    "    axes.set_xlabel(\"Length\")\n",
+    "axes.set_ylabel(\"Probability\")\n",
+    "axes.set_title(\"Median loop lengths (over nodes)\")\n",
+    "axes.set_xlim(left=0);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b57b0e43-7bdd-49ef-b3be-f608d4a32413",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vertex_sizes = []\n",
+    "for k in range(len(allloopavglengths)):\n",
+    "    try:\n",
+    "        vertex_sizes.append(allloopavglengths[k])\n",
+    "\n",
+    "    except:\n",
+    "        vertex_sizes.append(0)\n",
+    "\n",
+    "numloops_max = max(vertex_sizes)\n",
+    "vertex_sizes = [i / (numloops_max / 10) for i in vertex_sizes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ddfcad3-08d7-4ac4-b1dd-59086258b834",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plotCheck(\n",
+    "    G,\n",
+    "    nodes_id,\n",
+    "    nodes_coords,\n",
+    "    vertex_size=vertex_sizes,\n",
+    "    edge_width=get_edgewidth(G.ecount()),\n",
+    ")\n",
+    "plt.text(0, 0.17, \"Average loop length\")\n",
+    "fig.savefig(PATH[\"plot\"] + \"avglooplength_\" + str(LOOP_NUMNODE_BOUND));"
    ]
   },
   {
