--- a/code/03_scenario_analysis.ipynb
+++ b/code/03_scenario_analysis.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "## To do\n",
     "- [ ] Refactor with functions for restrictions\n",
-    "- [ ] Sudden bad weather/accident scenario for family: if k km travelled, what is shortest path back with/without/how much overlaps?\n",
+    "- [ ] Sudden bad weather/accident scenario for family: if k km travelled, what is shortest path back and how much overlap?\n",
     "- [ ] Re-think or drop due to coastline effects: Kommune cohesion: Loops vs distance to nearest kommune\n",
     "- [ ] How much of network due to topography / existing paths?\n",
     "- [ ] Study ideal triangle grid?\n",
