Refactor scenario analysis

--- a/code/03_scenario_analysis.ipynb
+++ b/code/03_scenario_analysis.ipynb
@@ -22,7 +22,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-07  \n",
-    "Last modified: 2024-10-07"
+    "Last modified: 2024-10-09"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "metadata": {},
    "source": [
     "## To do\n",
-    "- [ ] Refactor with functions for restrictions\n",
+    "- [X] Refactor with functions for restrictions\n",
     "- [ ] Sudden bad weather/accident scenario for family: if k km travelled, what is shortest path back and how much overlap?\n",
     "- [ ] Re-think or drop due to coastline effects: Kommune cohesion: Loops vs distance to nearest kommune\n",
     "- [ ] How much of network due to topography / existing paths?\n",
@@ -225,42 +225,11 @@
    "source": [
     "allloops_bound = {}\n",
     "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario lenghts\"):\n",
-    "    this_lengths = np.array(allloops[sourcenode][\"lengths\"]) * MPERUNIT\n",
-    "    mask_this = (this_lengths >= RESTRICTIONS[\"looplength_min\"]) & (\n",
-    "        this_lengths <= RESTRICTIONS[\"looplength_max\"]\n",
+    "    lengths_this = np.array(allloops[sourcenode][\"lengths\"]) * MPERUNIT\n",
+    "    mask_this = (lengths_this >= RESTRICTIONS[\"looplength_min\"]) & (\n",
+    "        lengths_this <= RESTRICTIONS[\"looplength_max\"]\n",
     "    )\n",
-    "    allloops_bound[sourcenode] = {\n",
-    "        \"loops\": list(compress(allloops[sourcenode][\"loops\"], mask_this)),\n",
-    "        \"lengths\": list(compress(allloops[sourcenode][\"lengths\"], mask_this)),\n",
-    "        \"numnodes\": list(compress(allloops[sourcenode][\"numnodes\"], mask_this)),\n",
-    "        \"water_profile\": list(\n",
-    "            compress(allloops[sourcenode][\"water_profile\"], mask_this)\n",
-    "        ),\n",
-    "        \"poi_diversity\": list(\n",
-    "            compress(allloops[sourcenode][\"poi_diversity\"], mask_this)\n",
-    "        ),\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "615ec811",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vertex_sizes = []\n",
-    "for k in range(len(allloops_bound.keys())):\n",
-    "    try:\n",
-    "        if PLOTLOGSCALE:\n",
-    "            vertex_sizes.append(np.log2(len(allloops_bound[k][\"loops\"]) + 1))\n",
-    "        else:\n",
-    "            vertex_sizes.append(len(allloops_bound[k][\"loops\"]))\n",
-    "    except:\n",
-    "        vertex_sizes.append(0)\n",
-    "\n",
-    "numloops_max = max(vertex_sizes)\n",
-    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]"
+    "    allloops_bound[sourcenode] = maskNode(allloops[sourcenode], mask_this)"
    ]
   },
   {
@@ -270,6 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "vertex_sizes, numloops_max = getVertexSizes(allloops_bound)\n",
     "fig = plotCheck(\n",
     "    G,\n",
     "    nodes_id,\n",
@@ -307,50 +277,12 @@
    "source": [
     "allloops_bound = {}\n",
     "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario gradients\"):\n",
-    "    this_lengths = np.array(allloops[sourcenode][\"lengths\"]) * MPERUNIT\n",
-    "    this_maxslopes = np.array(allloops[sourcenode][\"max_slopes\"])\n",
-    "    mask_this = this_lengths >= RESTRICTIONS[\"looplength_min\"]\n",
-    "    mask_this &= this_lengths <= RESTRICTIONS[\"looplength_max\"]\n",
-    "    mask_this &= this_maxslopes <= RESTRICTIONS[\"slope_max\"]\n",
-    "    allloops_bound[sourcenode] = {\n",
-    "        \"loops\": list(compress(allloops[sourcenode][\"loops\"], mask_this)),\n",
-    "        \"lengths\": list(compress(allloops[sourcenode][\"lengths\"], mask_this)),\n",
-    "        \"numnodes\": list(compress(allloops[sourcenode][\"numnodes\"], mask_this)),\n",
-    "        \"water_profile\": list(\n",
-    "            compress(allloops[sourcenode][\"water_profile\"], mask_this)\n",
-    "        ),\n",
-    "        \"poi_diversity\": list(\n",
-    "            compress(allloops[sourcenode][\"poi_diversity\"], mask_this)\n",
-    "        ),\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c97e46a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vertex_sizes = []\n",
-    "for k in range(len(allloops_bound.keys())):\n",
-    "    try:\n",
-    "        if PLOTLOGSCALE:\n",
-    "            vertex_sizes.append(np.log2(len(allloops_bound[k][\"loops\"]) + 1.01))\n",
-    "        else:\n",
-    "            vertex_sizes.append(len(allloops_bound[k][\"loops\"]))\n",
-    "    except:\n",
-    "        vertex_sizes.append(0)\n",
-    "\n",
-    "numloops_max = max(vertex_sizes)\n",
-    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]\n",
-    "\n",
-    "edge_colors = []\n",
-    "for e in G.es:\n",
-    "    if e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"]:\n",
-    "        edge_colors.append(\"red\")\n",
-    "    else:\n",
-    "        edge_colors.append(\"grey\")"
+    "    lengths_this = np.array(allloops[sourcenode][\"lengths\"]) * MPERUNIT\n",
+    "    maxslopes_this = np.array(allloops[sourcenode][\"max_slopes\"])\n",
+    "    mask_this = lengths_this >= RESTRICTIONS[\"looplength_min\"]\n",
+    "    mask_this &= lengths_this <= RESTRICTIONS[\"looplength_max\"]\n",
+    "    mask_this &= maxslopes_this <= RESTRICTIONS[\"slope_max\"]\n",
+    "    allloops_bound[sourcenode] = maskNode(allloops[sourcenode], mask_this)"
    ]
   },
   {
@@ -360,6 +292,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "vertex_sizes, numloops_max = getVertexSizes(allloops_bound)\n",
+    "\n",
+    "edge_colors = []\n",
+    "for e in G.es:\n",
+    "    if e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"]:\n",
+    "        edge_colors.append(\"red\")\n",
+    "    else:\n",
+    "        edge_colors.append(\"grey\")\n",
+    "\n",
     "fig = plotCheck(\n",
     "    G,\n",
     "    nodes_id,\n",
@@ -428,17 +369,9 @@
     "            ):\n",
     "                water_enough = False\n",
     "        mask_this[i] = water_enough\n",
-    "    allloops_bound_watered[sourcenode] = {\n",
-    "        \"loops\": list(compress(allloops_bound[sourcenode][\"loops\"], mask_this)),\n",
-    "        \"lengths\": list(compress(allloops_bound[sourcenode][\"lengths\"], mask_this)),\n",
-    "        \"numnodes\": list(compress(allloops_bound[sourcenode][\"numnodes\"], mask_this)),\n",
-    "        \"water_profile\": list(\n",
-    "            compress(allloops_bound[sourcenode][\"water_profile\"], mask_this)\n",
-    "        ),\n",
-    "        \"poi_diversity\": list(\n",
-    "            compress(allloops_bound[sourcenode][\"poi_diversity\"], mask_this)\n",
-    "        ),\n",
-    "    }"
+    "        allloops_bound_watered[sourcenode] = maskNode(\n",
+    "            allloops_bound[sourcenode], mask_this\n",
+    "        )"
    ]
   },
   {
@@ -448,19 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes = []\n",
-    "for k in range(len(allloops_bound_watered.keys())):\n",
-    "    try:\n",
-    "        if PLOTLOGSCALE:\n",
-    "            vertex_sizes.append(np.log2(len(allloops_bound_watered[k][\"loops\"]) + 1.01))\n",
-    "        else:\n",
-    "            vertex_sizes.append(len(allloops_bound_watered[k][\"loops\"]))\n",
-    "\n",
-    "    except:\n",
-    "        vertex_sizes.append(0)\n",
-    "\n",
-    "numloops_max = max(vertex_sizes)\n",
-    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]\n",
+    "vertex_sizes, numloops_max = getVertexSizes(allloops_bound_watered)\n",
     "\n",
     "edge_colors = []\n",
     "for e in G.es:\n",
@@ -542,21 +463,9 @@
     "        pd = allloops_bound_watered[sourcenode][\"poi_diversity\"][i]\n",
     "        if pd >= 3:\n",
     "            mask_this[i] = True\n",
-    "    allloops_bound_watered_diverse[sourcenode] = {\n",
-    "        \"loops\": list(compress(allloops_bound_watered[sourcenode][\"loops\"], mask_this)),\n",
-    "        \"lengths\": list(\n",
-    "            compress(allloops_bound_watered[sourcenode][\"lengths\"], mask_this)\n",
-    "        ),\n",
-    "        \"numnodes\": list(\n",
-    "            compress(allloops_bound_watered[sourcenode][\"numnodes\"], mask_this)\n",
-    "        ),\n",
-    "        \"water_profile\": list(\n",
-    "            compress(allloops_bound_watered[sourcenode][\"water_profile\"], mask_this)\n",
-    "        ),\n",
-    "        \"poi_diversity\": list(\n",
-    "            compress(allloops_bound_watered[sourcenode][\"poi_diversity\"], mask_this)\n",
-    "        ),\n",
-    "    }"
+    "    allloops_bound_watered_diverse[sourcenode] = maskNode(\n",
+    "        allloops_bound_watered[sourcenode], mask_this\n",
+    "    )"
    ]
   },
   {
@@ -566,20 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes = []\n",
-    "for k in range(len(allloops_bound_watered_diverse.keys())):\n",
-    "    try:\n",
-    "        if PLOTLOGSCALE:\n",
-    "            vertex_sizes.append(\n",
-    "                np.log2(len(allloops_bound_watered_diverse[k][\"loops\"]) + 1.01)\n",
-    "            )\n",
-    "        else:\n",
-    "            vertex_sizes.append(len(allloops_bound_watered_diverse[k][\"loops\"]))\n",
-    "    except:\n",
-    "        vertex_sizes.append(0)\n",
-    "\n",
-    "numloops_max = max(vertex_sizes)\n",
-    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]\n",
+    "vertex_sizes, numloops_max = getVertexSizes(allloops_bound_watered_diverse)\n",
     "\n",
     "edge_colors = []\n",
     "for e in G.es:\n",
