Comment out unique loop generation

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -309,44 +309,46 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9b6987ea",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# Get all unique loops, meaning a loop ABCA is counted only once and not as ABCA, BCAB, and CABC\n",
-    "allloops_unique = {}\n",
-    "nodes_done = set()\n",
-    "numloops_unique = 0\n",
-    "allloops_generator = nx.simple_cycles(Gnx, length_bound=LOOP_NUMNODE_BOUND)\n",
-    "for c in tqdm(allloops_generator):\n",
-    "    sourcenode = c[0]\n",
-    "    c_length = getLoopLength(c)\n",
-    "    c_max_slope = getLoopMaxSlope(c)\n",
-    "    c_water = getLoopWaterProfile(c)\n",
-    "    c_poi_diversity = getLoopPOIDiversity(c)\n",
-    "    numloops_unique += 1\n",
-    "    if sourcenode in nodes_done:\n",
-    "        allloops_unique[sourcenode][\"loops\"].append(c)\n",
-    "        allloops_unique[sourcenode][\"lengths\"].append(c_length)\n",
-    "        allloops_unique[sourcenode][\"numnodes\"].append(len(c))\n",
-    "        allloops_unique[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
-    "        allloops_unique[sourcenode][\"water_profile\"].append(c_water)\n",
-    "        allloops_unique[sourcenode][\"poi_diversity\"].append(c_poi_diversity)\n",
-    "    else:\n",
-    "        allloops_unique[sourcenode] = {\n",
-    "            \"loops\": [c],\n",
-    "            \"lengths\": [c_length],\n",
-    "            \"numnodes\": [len(c)],\n",
-    "            \"max_slopes\": [c_max_slope],\n",
-    "            \"water_profile\": [c_water],\n",
-    "            \"poi_diversity\": [c_poi_diversity],\n",
-    "        }\n",
-    "        nodes_done.add(sourcenode)\n",
-    "print(\n",
-    "    \"Found \"\n",
-    "    + str(numloops_unique)\n",
-    "    + \" unique loops for length bound \"\n",
-    "    + str(LOOP_NUMNODE_BOUND)\n",
-    ")"
+    "# # Get all unique loops, meaning a loop ABCA is counted only once and not as ABCA, BCAB, and CABC\n",
+    "# allloops_unique = {}\n",
+    "# nodes_done = set()\n",
+    "# numloops_unique = 0\n",
+    "# allloops_generator = nx.simple_cycles(Gnx, length_bound=LOOP_NUMNODE_BOUND)\n",
+    "# for c in tqdm(allloops_generator):\n",
+    "#     sourcenode = c[0]\n",
+    "#     c_length = getLoopLength(c)\n",
+    "#     c_max_slope = getLoopMaxSlope(c)\n",
+    "#     c_water = getLoopWaterProfile(c)\n",
+    "#     c_poi_diversity = getLoopPOIDiversity(c)\n",
+    "#     numloops_unique += 1\n",
+    "#     if sourcenode in nodes_done:\n",
+    "#         allloops_unique[sourcenode][\"loops\"].append(c)\n",
+    "#         allloops_unique[sourcenode][\"lengths\"].append(c_length)\n",
+    "#         allloops_unique[sourcenode][\"numnodes\"].append(len(c))\n",
+    "#         allloops_unique[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
+    "#         allloops_unique[sourcenode][\"water_profile\"].append(c_water)\n",
+    "#         allloops_unique[sourcenode][\"poi_diversity\"].append(c_poi_diversity)\n",
+    "#     else:\n",
+    "#         allloops_unique[sourcenode] = {\n",
+    "#             \"loops\": [c],\n",
+    "#             \"lengths\": [c_length],\n",
+    "#             \"numnodes\": [len(c)],\n",
+    "#             \"max_slopes\": [c_max_slope],\n",
+    "#             \"water_profile\": [c_water],\n",
+    "#             \"poi_diversity\": [c_poi_diversity],\n",
+    "#         }\n",
+    "#         nodes_done.add(sourcenode)\n",
+    "# print(\n",
+    "#     \"Found \"\n",
+    "#     + str(numloops_unique)\n",
+    "#     + \" unique loops for length bound \"\n",
+    "#     + str(LOOP_NUMNODE_BOUND)\n",
+    "# )"
    ]
   },
   {
